# physio_ppt

./: LICENSE  README.md  all_experiments_summary.csv  experiments_e1_full.csv  pyproject.toml
configs/data/: mitbih_fs500.yaml  ptbxl_fs500.yaml
configs/eval/: low_label_1_5_10.yaml  orderness_analysis.yaml  significance_bootstrap.yaml
configs/model/: backbone_resnet1d.yaml  backbone_transformer.yaml  heads_physio_ppt.yaml  heads_ppt.yaml  heads_wavepuzzle.yaml
configs/train/: hybrid_multitask.yaml  physio_ppt.yaml  ppt_classic.yaml  supervised_strong.yaml  wavepuzzle.yaml
experiments/strodthoff_protocol/: README.md  ToDoJournal.md
experiments/strodthoff_protocol/scripts/: bootstrap_strodthoff.py  build_code15_hdf5_index_strodthoff.py  compare_models_strodthoff.py  eval_strodthoff.py  evaluate_record_level_strodthoff.py  finetune_ssl_strodthoff.py  inspect_model_capacity_strodthoff.py  make_low_label_splits_strodthoff.py  make_strodthoff_splits.py  plot_strodthoff_results.py  prepare_ptbxl_strodthoff.py  pretrain_ssl_code15_strodthoff.py  summarize_strodthoff_results.py  train_supervised_strodthoff.py
scripts/: 00_prepare_data.sh  01_pretrain.sh  02_finetune_lowlabel.sh  03_eval_significance.sh  04_orderness_analysis.sh  05_make_figures.sh  generate_central_figure.py  generate_paper_figures.py  run_all.sh  run_e1_ppt_classic.sh  run_e1_supervised.sh  run_e2_ablations.sh  run_e2_seed123.sh  run_e3_all_seeds.sh
src/physio_ppt/: __init__.py  cli.py
src/physio_ppt/analysis/: acf_cos.py  beat_order_score.py  representation_probe.py
src/physio_ppt/utils/: io.py  (+6 more)
(+65 files in other folders)
